# STTran

./: .gitignore  pyproject.toml  test.py  train.py
fasterRCNN/lib/faster_rcnn.egg-info/: SOURCES.txt
sttran/: config.py  evaluation_recall.py  funcs.py  object_detector.py  sttran.py  visualize.py  word_vectors.py
sttran/dataloader/: action_genome.py
sttran/draw_rectangles/: draw_rectangles.c
sttran/fpn/: box_utils.py
sttran/fpn/box_intersections_cpu/: bbox.c
